--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Mern Course",
   "main": "server.js",
   "scripts": {
-    "start" : "node server",
-    "server" : "nodemon server",
+    "start": "node server",
+    "server": "nodemon server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -18,6 +18,7 @@
     "gravatar": "^1.8.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
+    "normalize-url": "^5.0.0",
     "request": "^2.88.2"
   },
   "devDependencies": {
