--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
     "normalize-url": "^5.0.0",
-    "request": "^2.88.2"
+    "request": "^2.88.2",
+    "axios": "^0.19.2"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
