--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "start": "node server",
     "server": "nodemon server",
-    "client" : "npm start --prefix client",
-    "dev" : "concurrently \"npm run server\" \"npm run client\"",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.1",
     "express": "^4.17.1",
@@ -21,8 +22,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
     "normalize-url": "^5.0.0",
-    "request": "^2.88.2",
-    "axios": "^0.19.2"
+    "prettier": "^2.0.5",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
