--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "format": "prettier --write '**/*.js'"
   },
   "author": "",
   "license": "ISC",
@@ -22,11 +23,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.15",
     "normalize-url": "^5.0.0",
-    "prettier": "^2.0.5",
     "request": "^2.88.2"
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
-    "nodemon": "^2.0.4"
+    "nodemon": "^2.0.4",
+    "prettier": "2.0.5"
   }
 }
