--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "mern-course",
   "version": "1.0.0",
   "description": "Mern Course",
-  "main": "server.js",
+  "main": "server/server.js",
   "scripts": {
-    "start": "node server",
-    "server": "nodemon server",
+    "start": "node server/server.js",
+    "server": "nodemon server/server.js",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write '**/*.js'"
+    "format": "prettier --write '**/*.js'",
+    "lint": "eslint client/src/**/*.js server/**/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -27,6 +28,14 @@
   },
   "devDependencies": {
     "concurrently": "^5.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-flowtype": "^5.1.3",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^2.5.1",
+    "install": "^0.13.0",
     "nodemon": "^2.0.4",
     "prettier": "2.0.5"
   }
