--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "concurrently \"npm run server\" \"npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write '**/*.js'",
-    "lint": "eslint client/src/**/*.js server/**/*.js"
+    "lint": "eslint client/src/**/*.js server/**/*.js",
+    "lintf": "eslint --fix client/src/**/*.js server/**/*.js"
   },
   "author": "",
   "license": "ISC",
@@ -33,8 +34,6 @@
     "eslint-plugin-flowtype": "^5.1.3",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^2.5.1",
     "install": "^0.13.0",
     "nodemon": "^2.0.4",
     "prettier": "2.0.5"
