--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,27 +1,19 @@
 {
     "env": {
-        "browser": true,
         "es6": true,
         "node": true
     },
     "extends": [
-        "plugin:react/recommended",
-        "airbnb"
+        "airbnb-base"
     ],
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaFeatures": {
-            "jsx": true
-        },
         "ecmaVersion": 11,
         "sourceType": "module"
     },
-    "plugins": [
-        "react"
-    ],
     "rules": {
     }
 }
